chore(lint): fix style lint errors (#6370)
* chore(project): update ci-check to include stylelint

* chore(lint): start style linting

* chore(lint): lint through data-table core

* chore(lint): fix style lint errors

* chore(lint): clear rest of stylelint errors

* chore(test): ignore react style errors

* chore(lint): fix more linting errors

* chore(lint): remove unused stylelint ignore

* chore(lint): fix lint error

Co-authored-by: Josh Black <josh@josh.black>

--- a/packages/components/src/components/accordion/_accordion.scss
+++ b/packages/components/src/components/accordion/_accordion.scss
@@ -35,6 +35,7 @@
 
   .#{$prefix}--accordion__heading {
     @include button-reset;
+
     color: $text-01;
     display: flex;
     align-items: flex-start;
@@ -66,7 +67,7 @@
       outline: none;
     }
 
-    &:focus:before {
+    &:focus::before {
       @include focus-outline('outline-compat');
     }
   }
@@ -156,7 +157,7 @@
     }
 
     .#{$prefix}--accordion__arrow {
-      /*rtl:ignore*/
+      /* rtl:ignore */
       transform: rotate(-90deg);
       fill: $ui-05;
     }
