--- a/packages/components/src/components/tabs/_tabs.scss
+++ b/packages/components/src/components/tabs/_tabs.scss
@@ -21,6 +21,7 @@
   .#{$prefix}--tabs {
     @include reset;
     @include type-style('body-short-01');
+
     color: $text-01;
     height: auto;
     width: 100%;
@@ -68,6 +69,7 @@
   .#{$prefix}--tabs-trigger--open:focus,
   .#{$prefix}--tabs-trigger--open:active {
     @include focus-outline('reset');
+
     transition: outline $duration--fast-01 motion(standard, productive);
   }
 
@@ -104,6 +106,7 @@
 
   .#{$prefix}--tabs__nav {
     @include box-shadow;
+
     margin: 0;
     padding: 0;
     position: absolute;
@@ -145,6 +148,7 @@
   //-----------------------------
   .#{$prefix}--tabs__nav-item {
     @include reset;
+
     background-color: $ui-01;
     display: flex;
     padding: 0;
@@ -167,13 +171,13 @@
     @include carbon--breakpoint(md) {
       background-color: $ui-03;
 
-      & + .#{$prefix}--tabs__nav-item {
+      + .#{$prefix}--tabs__nav-item {
         margin-left: 0;
         // Draws the border without affecting the inner-content
         box-shadow: -1px 0 0 0 $ui-04;
       }
 
-      & + .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--selected,
+      + .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--selected,
       &.#{$prefix}--tabs__nav-item--selected + .#{$prefix}--tabs__nav-item {
         box-shadow: none;
       }
@@ -202,8 +206,7 @@
     @include carbon--breakpoint(md) {
       background-color: transparent;
 
-      &,
-      & + .#{$prefix}--tabs__nav-item {
+      + .#{$prefix}--tabs__nav-item {
         box-shadow: none;
       }
     }
@@ -225,10 +228,6 @@
     outline: none;
   }
 
-  .#{$prefix}--tabs__nav-item--disabled .#{$prefix}--tabs__nav-link {
-    pointer-events: none;
-  }
-
   .#{$prefix}--tabs--container
     .#{$prefix}--tabs__nav-item.#{$prefix}--tabs__nav-item--disabled,
   .#{$prefix}--tabs--container
@@ -243,6 +242,7 @@
     .#{$prefix}--tabs__nav-link {
     @include carbon--breakpoint(md) {
       color: $disabled-03;
+      border-bottom: none;
     }
   }
 
@@ -260,6 +260,7 @@
       .#{$prefix}--tabs__nav-link:focus,
       .#{$prefix}--tabs__nav-link:active {
         @include type-style('productive-heading-01');
+
         color: $text-01;
         border-bottom: 2px solid $interactive-04;
       }
@@ -274,10 +275,9 @@
       background-color: $ui-01;
 
       .#{$prefix}--tabs__nav-link {
-        line-height: calc(
-          #{rem(48px)} - (#{$spacing-03} * 2)
-        ); // height - vertical padding
+        // height - vertical padding
         // Draws the border without affecting the inner-content
+        line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
         box-shadow: inset 0 2px 0 0 $interactive-04;
         border-bottom: none;
         padding: $spacing-03 $spacing-05;
@@ -295,6 +295,7 @@
   //-----------------------------
   a.#{$prefix}--tabs__nav-link {
     @include focus-outline('reset');
+
     display: inline-block;
     color: $text-02;
     text-decoration: none;
@@ -305,7 +306,7 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     margin: 0 $spacing-05;
-    line-height: rem(16px);
+    line-height: 1rem;
     border-bottom: 1px solid $ui-03;
     overflow: hidden;
     transition: border $duration--fast-01 motion(standard, productive),
@@ -314,6 +315,7 @@
     &:focus,
     &:active {
       @include focus-outline('outline');
+
       width: 100%;
       margin: 0;
       padding-left: 16px;
@@ -337,9 +339,8 @@
   .#{$prefix}--tabs--container a.#{$prefix}--tabs__nav-link {
     @include carbon--breakpoint(md) {
       height: rem(48px);
-      line-height: calc(
-        #{rem(48px)} - (#{$spacing-03} * 2)
-      ); // height - vertical padding
+      // Height - vertical padding
+      line-height: calc(#{rem(48px)} - (#{$spacing-03} * 2));
       border-bottom: none;
       padding: $spacing-03 $spacing-05;
     }
@@ -371,6 +372,7 @@
   .#{$prefix}--tabs__nav-item--disabled .#{$prefix}--tabs__nav-link {
     color: $tab-text-disabled;
     border-bottom: $tab-underline-disabled;
+    pointer-events: none;
   }
 
   .#{$prefix}--tabs__nav-item--disabled:hover .#{$prefix}--tabs__nav-link {
@@ -382,14 +384,6 @@
   .#{$prefix}--tabs__nav-item--disabled a.#{$prefix}--tabs__nav-link:active {
     outline: none;
     border-bottom: $tab-underline-disabled;
-  }
-
-  .#{$prefix}--tabs--container
-    .#{$prefix}--tabs__nav-item--disabled
-    .#{$prefix}--tabs__nav-link {
-    @include carbon--breakpoint(md) {
-      border-bottom: none;
-    }
   }
 
   //-----------------------------
@@ -419,12 +413,14 @@
 
   .#{$prefix}--tabs.#{$prefix}--skeleton .#{$prefix}--tabs__nav-link {
     @include skeleton;
+
     width: rem(75px);
     height: rem(12px);
   }
 
   .#{$prefix}--tabs.#{$prefix}--skeleton .#{$prefix}--tabs-trigger {
     @include skeleton;
+
     width: rem(100px);
   }
 
