--- a/packages/components/src/globals/scss/_css--reset.scss
+++ b/packages/components/src/globals/scss/_css--reset.scss
@@ -23,8 +23,8 @@
     vertical-align: baseline;
 
     *,
-    *:before,
-    *:after {
+    *::before,
+    *::after {
       box-sizing: inherit;
     }
   }
@@ -117,8 +117,8 @@
       margin: 0;
       padding: 0;
       border: 0;
-      font-size: 100%;
       font: inherit;
+      font-size: 100%;
       vertical-align: baseline;
     }
 
@@ -173,12 +173,11 @@
       quotes: none;
     }
 
-    blockquote:before,
-    blockquote:after,
-    q:before,
-    q:after {
+    blockquote::before,
+    blockquote::after,
+    q::before,
+    q::after {
       content: '';
-      content: none;
     }
 
     table {
