--- a/packages/components/src/components/data-table/_data-table-core.scss
+++ b/packages/components/src/components/data-table/_data-table-core.scss
@@ -20,7 +20,8 @@
   .#{$prefix}--data-table-container {
     min-width: rem(500px);
     overflow-x: auto;
-    padding-top: $spacing-01; // allow space for focus styles
+    // Allow space for focus styles
+    padding-top: $spacing-01;
   }
 
   //----------------------------------------------------------------------------
@@ -33,11 +34,13 @@
 
   .#{$prefix}--data-table-header__title {
     @include type-style('productive-heading-03');
+
     color: $text-01;
   }
 
   .#{$prefix}--data-table-header__description {
     @include type-style('body-short-01');
+
     color: $text-02;
   }
 
@@ -52,11 +55,13 @@
 
   .#{$prefix}--data-table thead {
     @include type-style('productive-heading-01');
+
     background-color: $ui-03;
   }
 
   .#{$prefix}--data-table tbody {
     @include type-style('body-short-01');
+
     background-color: $ui-01;
     width: 100%;
   }
@@ -129,7 +134,8 @@
 
   @supports (-moz-appearance: none) {
     .#{$prefix}--data-table td {
-      background-clip: padding-box; // fix to show borders in ff
+      // Fix to show borders in ff
+      background-clip: padding-box;
     }
   }
 
@@ -190,9 +196,8 @@
     svg {
     margin-right: $spacing-03;
     position: relative;
-    top: rem(
-      3px
-    ); //used to center svg without setting display flex //display block needed for overflow text truncation
+    // Used to center svg without setting display flex //display block needed for overflow text truncation
+    top: rem(3px);
   }
 
   .#{$prefix}--data-table .#{$prefix}--overflow-menu,
@@ -213,10 +218,6 @@
   .#{$prefix}--data-table--short td.#{$prefix}--table-column-menu {
     padding-top: 0;
     padding-bottom: 0;
-  }
-
-  .#{$prefix}--data-table--compact td.#{$prefix}--table-column-menu,
-  .#{$prefix}--data-table--short td.#{$prefix}--table-column-menu {
     height: rem(24px);
   }
 
@@ -270,9 +271,8 @@
     background: $ui-03;
     padding-left: $spacing-05;
     padding-right: $spacing-05;
-    width: rem(
-      44px
-    ); // 16px padding left + 8px padding right + 20px checkbox width
+    // 16px padding left + 8px padding right + 20px checkbox width
+    width: rem(44px);
     transition: background-color $duration--fast-01 motion(entrance, productive);
   }
 
@@ -304,16 +304,18 @@
     color: $text-01;
     background-color: $selected-ui;
     border-top: 1px solid $selected-ui;
-    border-bottom: 1px solid $active-ui; //bottom border acts as separator from other rows
+    // Bottom border acts as separator from other rows
+    border-bottom: 1px solid $active-ui;
   }
 
-  // first row
+  // First row
   .#{$prefix}--data-table--zebra
     tbody
     tr:first-of-type:nth-child(odd).#{$prefix}--data-table--selected
     td,
   tr.#{$prefix}--data-table--selected:first-of-type td {
-    border-top: 1px solid $active-ui; //top border acts as separator from thead
+    // Top border acts as separator from thead
+    border-top: 1px solid $active-ui;
   }
 
   // last row + zebra select last
@@ -326,7 +328,8 @@
     tr:last-of-type:nth-child(even).#{$prefix}--data-table--selected
     td,
   tr.#{$prefix}--data-table--selected:last-of-type td {
-    border-top: 1px solid $selected-ui; // doesn't need separators
+    // Doesn't need separators
+    border-top: 1px solid $selected-ui;
     border-bottom: 1px solid $selected-ui;
   }
 
@@ -398,7 +401,8 @@
   .#{$prefix}--data-table.#{$prefix}--data-table--compact
     .#{$prefix}--table-column-checkbox
     .#{$prefix}--checkbox-label {
-    min-height: rem(23px); //24px row - 1px border
+    // 24px row - 1px border
+    min-height: rem(23px);
     height: rem(23px);
   }
 
@@ -494,7 +498,8 @@
       top: 0;
       width: 100%;
       overflow: scroll;
-      -ms-overflow-style: none; //hides ie scrollbar
+      // Hides ie scrollbar
+      -ms-overflow-style: none;
       will-change: transform;
     }
 
@@ -505,7 +510,8 @@
     tbody {
       flex-direction: column;
       overflow-x: scroll;
-      -ms-overflow-style: none; //hides ie scrollbar
+      // Hides ie scrollbar
+      -ms-overflow-style: none;
       will-change: transform;
     }
 
