--- a/packages/components/src/components/form/_form.scss
+++ b/packages/components/src/components/form/_form.scss
@@ -42,7 +42,7 @@
     display: inline-block;
     vertical-align: baseline;
     margin-bottom: $carbon--spacing-03;
-    line-height: rem(16px);
+    line-height: 1rem;
   }
 
   .#{$prefix}--label .#{$prefix}--tooltip__trigger {
