--- a/packages/components/src/components/loading/_mixins.scss
+++ b/packages/components/src/components/loading/_mixins.scss
@@ -36,7 +36,7 @@
     rotate-end-p2 700ms $carbon--ease-out 700ms forwards;
 
   // Animate the stroke
-  & svg circle {
+  svg circle {
     animation-name: stroke-end;
     animation-duration: 700ms;
     animation-timing-function: $carbon--ease-out;
