--- a/packages/components/src/components/number-input/_number-input.scss
+++ b/packages/components/src/components/number-input/_number-input.scss
@@ -18,6 +18,7 @@
 @mixin number-input {
   .#{$prefix}--number {
     @include reset;
+
     display: flex;
     flex-direction: column;
     position: relative;
@@ -26,6 +27,7 @@
   .#{$prefix}--number input[type='number'] {
     @include type-style('body-short-01');
     @include focus-outline('reset');
+
     font-family: carbon--font-family('mono');
     box-sizing: border-box;
     display: inline-flex;
@@ -56,14 +58,17 @@
       fill: $disabled;
     }
 
-    -moz-appearance: textfield; // Firefox: Hide spinner (up and down buttons)
+    // Firefox: Hide spinner (up and down buttons)
+    -moz-appearance: textfield;
 
+    // IE: Hide "clear-field" `x` button on input field
     &::-ms-clear {
-      display: none; // IE: Hide "clear-field" `x` button on input field
+      display: none;
     }
 
+    // Safari: Hide number spinner
     &::-webkit-inner-spin-button {
-      appearance: none; // Safari: Hide number spinner
+      appearance: none;
     }
   }
 
@@ -94,6 +99,7 @@
 
   .#{$prefix}--number__controls {
     @include reset;
+
     position: absolute;
     right: 0;
     display: flex;
@@ -107,6 +113,7 @@
 
   .#{$prefix}--number__control-btn {
     @include button-reset;
+
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -129,6 +136,7 @@
 
     &:focus {
       @include focus-outline;
+
       color: $icon-01;
       outline-width: 2px;
       outline-offset: -2px;
@@ -136,9 +144,6 @@
 
     &:hover {
       cursor: pointer;
-    }
-
-    &:hover {
       color: $icon-01;
     }
 
@@ -237,11 +242,13 @@
   }
 
   .#{$prefix}--number--xl .#{$prefix}--number__control-btn.up-icon svg {
-    top: rem(6.6px); // Needed to maintain arrow spacing between input sizes.
+    // Needed to maintain arrow spacing between input sizes.
+    top: rem(6.6px);
   }
 
   .#{$prefix}--number--xl .#{$prefix}--number__control-btn.down-icon svg {
-    top: rem(-6.6px); // Needed to maintain arrow spacing between input sizes.
+    // Needed to maintain arrow spacing between input sizes.
+    top: rem(-6.6px);
   }
 
   .#{$prefix}--number--sm input[type='number'] {
@@ -259,11 +266,13 @@
   }
 
   .#{$prefix}--number--sm .#{$prefix}--number__control-btn.up-icon svg {
-    top: rem(3.4px); // Needed to maintain arrow spacing between input sizes.
+    // Needed to maintain arrow spacing between input sizes.
+    top: rem(3.4px);
   }
 
   .#{$prefix}--number--sm .#{$prefix}--number__control-btn.down-icon svg {
-    top: rem(-3.4px); // Needed to maintain arrow spacing between input sizes.
+    // Needed to maintain arrow spacing between input sizes.
+    top: rem(-3.4px);
   }
 
   //No label positioning adjustment
@@ -274,6 +283,7 @@
   // Skeleton State
   .#{$prefix}--number.#{$prefix}--skeleton {
     @include skeleton;
+
     width: 100%;
     height: 2.5rem;
 
